--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SpwG</title>
     <link rel="stylesheet" href="assets\style.css"/>
     <script src="assets\app.js"></script>
 </head>
 
 <body>
+    <h1>Secure Generator</h1>
+
+    <div>
+        <p>Procure</p>
+    </div>
     
 </body>
 </html>
