--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <h1>Secure Generator</h1>
 
     <div>
+        <hr/>
         <p>Procure</p>
+        
+            <div>
+                <p id="title">Procurement</p>
+            </div>
     </div>
-    
+        <hr/>
 </body>
 </html>
